Add a span for button text next to button icon
This is necessary for true vertical alignment.
See http://christopheraue.net/2014/03/05/vertical-align/

--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -257,8 +257,13 @@
   }
 }
 
-// Positions the icon nicely within the button.
+.btn-text {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .btn-icon {
+  display: inline-block;
   font-size: 1.4em;
   vertical-align: middle;
 }
