--- a/h/static/styles/topbar.scss
+++ b/h/static/styles/topbar.scss
@@ -1,3 +1,5 @@
+@import 'compass/css3/flexbox';
+
 @import 'base';
 @import 'mixins/responsive';
 
@@ -6,31 +8,44 @@
   border: solid 1px $gray-lighter;
   border-style: solid none;
   height: 30px;
+  font-size: 14px;
   position: fixed;
   left: 0;
   right: 0;
   top: 0;
   z-index: 5;
+}
 
-  .inner {
-    * {
-      font-size: 14px;
-      line-height: 28px;
+.topbar .inner {
+  @include display-flex;
+  @include flex-flow(row nowrap);
+  @include align-items(center);
+  @include justify-content(space-between);
 
-      .btn-icon {
-        font-size: 18px;
-      }
-    }
+  /* IE10 support */
+  display: -ms-flexbox;
+  -ms-flex-align: center;
+  -ms-flex-flow: row nowrap;
+  -ms-flex-pack: justify;
 
-    @include respond-to(wide-handhelds handhelds) {
-      margin: 0 .72em;
-    }
+  height: 28px;
+
+  @include respond-to(wide-handhelds handhelds) {
+    margin: 0 .36em;
   }
+}
+
+.topbar .inner > * {
+  margin-left: .36em;
+}
+
+.topbar .inner .simple-search {
+  @include flex-grow(1);
+  -ms-flex: 1;  /* IE10 support */
 }
 
 .topbar .btn {
   color: $gray-light;
-  height: 28px;
   min-width: 28px;
 
   border: 0;
