--- a/h/templates/pattern_library.html.jinja2
+++ b/h/templates/pattern_library.html.jinja2
@@ -513,7 +513,9 @@
       <div class="pattern-library-example-content">
         <form class="simple-search-form">
           <input class="simple-search-input" type="text" name="searchText" placeholder="Search…" />
-          <i class="simple-search-icon h-icon-search"></i>
+          <button class="simple-search-icon btn btn-clean">
+            <i class="h-icon-search btn-icon"></i>
+          </button>
         </form>
       </div>
     </div>
