Use scale instead of font-size for icon scaling
This is much neater. Since the scale origin is the center of the
icon this will scale around the center of the line, avoiding any
messy vertical alignment nonsense. This works much better than
vertical-align middle and font-size because vertical-align middle
puts the center of the element at the x-height, rather than the
middle of the line. This is much cleaner.

--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -256,15 +256,9 @@
   }
 }
 
-.btn-text {
-  display: inline-block;
-  vertical-align: middle;
-}
-
 .btn-icon {
   display: inline-block;
-  font-size: 1.4em;
-  vertical-align: middle;
+  transform: scale(1.2);
 }
 
 // Positions a message/icon to the left of a button.
