--- a/h/static/styles/topbar.scss
+++ b/h/static/styles/topbar.scss
@@ -29,19 +29,12 @@
   -ms-flex-pack: justify;
 
   height: 28px;
-
-  @include respond-to(wide-handhelds handhelds) {
-    margin: 0 .36em;
-  }
-}
-
-.topbar .inner > * {
-  margin-left: .36em;
 }
 
 .topbar .inner .simple-search {
   @include flex-grow(1);
   -ms-flex: 1;  /* IE10 support */
+  margin-right: .75em;
 }
 
 .topbar .btn {
