Bigger margin / no padding around actions buttons

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -59,7 +59,8 @@
   button {
     color: $gray-light;
     font-weight: normal;
-    padding: 0 .125em;
+    margin: 0 .2em;
+    padding: 0;
 
     .annotation:hover & {
       color: $link-color;
