--- a/h/templates/client/share_dialog.html
+++ b/h/templates/client/share_dialog.html
@@ -1,4 +1,4 @@
-<div id="dialog" class="sheet content">
+<div class="content sheet">
   <i class="close h-icon-close"
      role="button"
      title="Close"
