--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -58,41 +58,36 @@
   </div>
   <!-- / Toolbar -->
 
-  <!-- Wrapper -->
-  <div id="wrapper">
-    <!-- Account Dialog -->
-    <div class="content ng-cloak" ng-if="accountDialog.visible">
-      <div id="dialog" class="sheet">
-        <i class="close h-icon-close"
-           role="button"
-           title="Close"
-           ng-click="accountDialog.visible = false"></i>
-        <div ng-if="auth.user">
-          {% block settings %}
-            <div class="tabbable"
-                 ng-controller="AccountController"
-                 ng-model="tab">
-              {{ include_raw("h:templates/client/settings/account.html") }}
-              {{ include_raw("h:templates/client/settings/notifications.html") }}
-            </div>
-          {% endblock %}
-        </div>
-        <div ng-if="!auth.user">
-          {% block auth %}
-            {{ include_raw("h:templates/client/auth.html") }}
-          {% endblock %}
-        </div>
+  <!-- Account Dialog -->
+  <div class="content sheet" ng-if="accountDialog.visible">
+    <i class="close h-icon-close"
+       role="button"
+       title="Close"
+       ng-click="accountDialog.visible = false"></i>
+    <div ng-if="auth.user">
+      {% block settings %}
+      <div class="tabbable"
+           ng-controller="AccountController"
+           ng-model="tab">
+        {{ include_raw("h:templates/client/settings/account.html") }}
+        {{ include_raw("h:templates/client/settings/notifications.html") }}
       </div>
+      {% endblock %}
     </div>
-    <!-- / Account Dialog -->
-
-    <!-- Share View Dialog -->
-    <div share-dialog="" ng-show="shareDialog.visible"></div>
-    <!-- / Share View Dialog -->
-
-    <!-- Angular view -->
-    <main class="content" ng-view=""></main>
+    <div ng-if="!auth.user">
+      {% block auth %}
+      {{ include_raw("h:templates/client/auth.html") }}
+      {% endblock %}
+    </div>
   </div>
+  <!-- / Account Dialog -->
+
+  <!-- Share View Dialog -->
+  <div share-dialog="" ng-show="shareDialog.visible"></div>
+  <!-- / Share View Dialog -->
+
+  <!-- Angular view -->
+  <main class="content" ng-view=""></main>
   <!-- / Wrapper -->
 {% endblock %}
 
