--- a/h/templates/5xx.html.jinja2
+++ b/h/templates/5xx.html.jinja2
@@ -32,7 +32,7 @@
           text-decoration: none;
         }
 
-        #home {
+        main {
           margin-left: auto;
           margin-right: auto;
           background: #fff;
@@ -42,7 +42,7 @@
         }
 
         @media only screen and (max-width: 1024px) and (min-width: 767px) {
-          #home {
+          main {
             padding: 2em 4em 3em;
             margin: auto;
             max-width: 768px;
@@ -57,12 +57,12 @@
       </style>
   </head>
   <body>
-  <div id="home" style="margin-top:20px" class="content paper styled-text page">
+  <main class="content paper styled-text page">
     <img id="graphic" src="/assets/images/sad-annotation.svg" />
     <h1>Uh-oh, something went wrong!</h1>
     <p>We&rsquo;re very sorry, our application wasn&rsquo;t able to load this page. The
        team has been notified and we&rsquo;ll&nbsp;fix&nbsp;it&nbsp;shortly.</p>
     <p>If the problem persists or you'd like more information please contact&nbsp;<a href="mailto:support@hypothes.is?subject=Internal%20Server%20Error%20on%20Hypothes.is">support@hypothes.is</a>.</p>
-  </div>
+  </main>
   </body>
 </html>
