--- a/h/templates/notfound.html.jinja2
+++ b/h/templates/notfound.html.jinja2
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="home" style="margin-top:20px" class="content paper styled-text page">
+  <main class="content paper styled-text page">
     <h1>There&rsquo;s nothing here!</h1>
     <p>Either this page doesn&rsquo;t exist, or you don&rsquo;t have the permissions required for viewing it.</p>
     <form class="form" action="/stream" method="get">
@@ -23,5 +23,5 @@
         </div>
       </div>
     </form>
-  </div>
+  </main>
 {% endblock %}
