--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -29,7 +29,7 @@
            on-clear="search.clear()"></div>
       <!-- / Searchbar -->
 
-      <div ng-if="auth.user && feature('groups')">
+      <div class="group-list" ng-if="auth.user && feature('groups')">
         {{ include_raw("h:templates/client/group_list.html") }}
       </div>
 
