--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -1,5 +1,4 @@
-<div ng-controller="GroupListCtrl as ctrl"
-     class="pull-right dropdown group-list">
+<div ng-controller="GroupListCtrl as ctrl" class="pull-right dropdown">
   <span role="button" class="dropdown-toggle" data-toggle="dropdown">
     <i ng-if="ctrl.focusedGroup().hashid == '__public__'"
        class="h-icon-public"></i>
