--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -10,16 +10,13 @@
   <ul class="dropdown-menu pull-right" role="menu">
     <li ng-repeat="group in ctrl.groups()"
         ng-class="group.hashid == ctrl.focusedGroup().hashid? 'selected' : ''">
-      <div class="pull-left group-name">
-        <a ng-click="ctrl.focusGroup(group.hashid)">
-          <i ng-if="group.hashid == '__public__'" class="h-icon-public"></i>
-          <i ng-if="group.hashid != '__public__'" class="h-icon-group"></i>
-          {{group.name}}
-        </a>
-      </div>
-      <a ng-href="{{group.url}}" target="_blank" class="h-icon-link pull-right"
+      <a class="group-name"  ng-click="ctrl.focusGroup(group.hashid)">
+        <i ng-if="group.hashid == '__public__'" class="h-icon-public"></i>
+        <i ng-if="group.hashid != '__public__'" class="h-icon-group"></i>
+        {{group.name}}
+      </a>
+      <a ng-href="{{group.url}}" target="_blank" class="h-icon-link"
          title="Share this group"></a>
-      <div style="clear:both;"></div>
     </li>
     <li>
       <a href="/groups/new" target="_blank"><i class="h-icon-add"></i>
