--- a/h/static/styles/help-page.scss
+++ b/h/static/styles/help-page.scss
@@ -103,7 +103,7 @@ body {
 }
 
 #help-2 {
-  background: url(../images/help-arrow.svg) 0 0 no-repeat;
+  background: image-url("images/help-arrow.svg") 0 0 no-repeat;
   width: 60px;
   height: 45px;
   position: absolute;
