Export GroupListController as default export
Use "// @ngInject" and export a basic constructor to be declared
as an angular controller at the point of require.

--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -1,4 +1,4 @@
-<div ng-controller="GroupListCtrl as ctrl" class="pull-right dropdown">
+<div ng-controller="GroupListController as ctrl" class="pull-right dropdown">
   <span role="button" class="dropdown-toggle" data-toggle="dropdown">
     <i ng-if="ctrl.focusedGroup().hashid == '__public__'"
        class="h-icon-public"></i>
