Always set an annotation's group on the backend
Insert group: '__none__' into annotations that have no group field
server-side, before returning them to the API client'

This makes the server-side code a little fiddlier but makes the
client-side code simpler because it can assume that every annotation has
a group, and it can always send group: '__none__' when saving an
annotation.

Server
------

transform.py:
Have the API add group: '__none__' to any annotations without a group field,
before returning them to the client.

groups/auth.py:
Authorization functions always return True if the annotation's group is
'__none__'. Anyone can read/create/edit/delete annotations with group
'__none__'.

groups/search.py:
Make sure that the groups search filter never filters out annotations with
group: '__none__'.

session.py:
Always return a {'name': 'Public', 'hashid': '__none__'} group (this ends up in
the groups dropdown menu).

Client
------

group-service.js:
Special handling of the public group is no longer needed.

annotation.coffee:

- If model.group isn't already set then set it to group.focusedGroup() on
controller initialization (this is for when creating new annotations which
haven't been saved to the server yet).

- Simplify this.group()

- No longer need to save model.group on save 'cos it's set on init.

privacy.coffee:
Becomes a lot simpler because we can always rely on scope.group() being set.

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -128,12 +128,12 @@
         This annotation will be visible only to you.
       </p>
       <p ng-show="vm.privacyLevel.name == 'public'">
-        <span ng-if="vm.group()">
+        <span ng-if="vm.privacyLevel.isGroup">
           <i class="h-icon-group"></i>
           This annotation will be visible to everyone in the
           <strong>{{vm.group().name}}</strong> group.
         </span>
-        <span ng-if="!vm.group()">
+        <span ng-if="!vm.privacyLevel.isGroup">
           <i class="h-icon-public"></i>
           This annotation will be visible to everyone.
         </span>
