--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -1,8 +1,8 @@
 <div ng-controller="GroupListController as ctrl" class="pull-right dropdown">
   <span role="button" class="dropdown-toggle" data-toggle="dropdown">
-    <i ng-if="ctrl.focusedGroup().hashid == '__public__'"
+    <i ng-if="ctrl.focusedGroup().hashid == '__none__'"
        class="h-icon-public"></i>
-    <i ng-if="ctrl.focusedGroup().hashid != '__public__'"
+    <i ng-if="ctrl.focusedGroup().hashid != '__none__'"
        class="h-icon-group"></i>
     {{ctrl.focusedGroup().name}}
     <i class="h-icon-arrow-drop-down"></i>
@@ -11,11 +11,11 @@
     <li ng-repeat="group in ctrl.groups()"
         ng-class="group.hashid == ctrl.focusedGroup().hashid? 'selected' : ''">
       <a class="group-name"  ng-click="ctrl.focusGroup(group.hashid)">
-        <i ng-if="group.hashid == '__public__'" class="h-icon-public"></i>
-        <i ng-if="group.hashid != '__public__'" class="h-icon-group"></i>
+        <i ng-if="group.hashid == '__none__'" class="h-icon-public"></i>
+        <i ng-if="group.hashid != '__none__'" class="h-icon-group"></i>
         {{group.name}}
       </a>
-      <a ng-href="{{group.url}}" ng-if="group.hashid != '__public__'"
+      <a ng-href="{{group.url}}" ng-if="group.url"
          target="_blank" class="h-icon-link" title="Share this group"></a>
     </li>
     <li>
