--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -10,10 +10,10 @@
   </span>
   <ul class="dropdown-menu pull-right" role="menu">
     <li ng-repeat="group in groups.all()"
-        ng-class="group.hashid == groups.focused().hashid? 'selected' : ''">
+        ng-class="group.id == groups.focused().id? 'selected' : ''">
       <a class="group-name"
          href=""
-         ng-click="groups.focus(group.hashid)"
+         ng-click="groups.focus(group.id)"
          ng-switch on="group.public">
         <i class="h-icon-public" ng-switch-when="true"></i>
         <i class="h-icon-group" ng-switch-default></i>
