--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -1,8 +1,8 @@
 <div ng-controller="GroupListController as ctrl" class="pull-right dropdown">
   <span role="button" class="dropdown-toggle" data-toggle="dropdown">
-    <i ng-if="ctrl.focusedGroup().id == '__world__'"
+    <i ng-if="ctrl.focusedGroup().public"
        class="h-icon-public"></i>
-    <i ng-if="ctrl.focusedGroup().id != '__world__'"
+    <i ng-if="ctrl.focusedGroup().private"
        class="h-icon-group"></i>
     {{ctrl.focusedGroup().name}}
     <i class="h-icon-arrow-drop-down"></i>
@@ -11,8 +11,8 @@
     <li ng-repeat="group in ctrl.groups()"
         ng-class="group.id == ctrl.focusedGroup().id? 'selected' : ''">
       <a class="group-name"  ng-click="ctrl.focusGroup(group.id)">
-        <i ng-if="group.id == '__world__'" class="h-icon-public"></i>
-        <i ng-if="group.id != '__world__'" class="h-icon-group"></i>
+        <i ng-if="group.public" class="h-icon-public"></i>
+        <i ng-if="group.private" class="h-icon-group"></i>
         {{group.name}}
       </a>
       <a ng-href="{{group.url}}" ng-if="group.url"
