--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -4,15 +4,18 @@
        class="h-icon-public"></i>
     <i ng-if="ctrl.focusedGroup().private"
        class="h-icon-group"></i>
+    <i ng-if="!(ctrl.focusedGroup().public || ctrl.focusedGroup().private)"
+       class="h-icon-group"></i>
     {{ctrl.focusedGroup().name}}
     <i class="h-icon-arrow-drop-down"></i>
   </span>
   <ul class="dropdown-menu pull-right" role="menu">
     <li ng-repeat="group in ctrl.groups()"
-        ng-class="group.id == ctrl.focusedGroup().id? 'selected' : ''">
-      <a class="group-name"  ng-click="ctrl.focusGroup(group.id)">
+        ng-class="group.id == ctrl.focusedGroup().id ? 'selected' : ''">
+      <a class="group-name" href="" ng-click="ctrl.focusGroup(group.id)">
         <i ng-if="group.public" class="h-icon-public"></i>
-        <i ng-if="group.private" class="h-icon-group"></i>
+        <i ng-if="group.private" class="h-icon-lock"></i>
+        <i ng-if="!(group.public || group.private)" class="h-icon-group"></i>
         {{group.name}}
       </a>
       <a ng-href="{{group.url}}" ng-if="group.url"
