--- a/h/templates/layouts/admin.html.jinja2
+++ b/h/templates/layouts/admin.html.jinja2
@@ -4,6 +4,7 @@
     ('nipsa', 'NIPSA', request.route_url('admin_nipsa')),
     ('admins', 'Administrators', request.route_url('admin_admins')),
     ('staff', 'Staff', request.route_url('admin_staff')),
+    ('users', 'Users', request.route_url('admin_users')),
 ] -%}
 
 {%- set page_id = page_id|default('home') -%}
