--- a/h/static/styles/annotator/inject.scss
+++ b/h/static/styles/annotator/inject.scss
@@ -158,36 +158,27 @@ $base-font-size: 14px;
 }
 
 .annotator-frame .annotator-toolbar li {
-  @include smallshadow;
-  background: $white;
-  border: solid 1px $gray-lighter;
-  border-radius: 4px;
-  left: 0;
   font-size: 18px;
-  margin-top: 5px;
-  overflow: hidden;
-  position: relative;
-  height: 30px;
-  width: 30px;
+  margin-bottom: 5px;
 
-  &:first-child {
+  &:first-child button {
     @include box-shadow(none);
     border-radius: 4px 0 0 4px;
     border-right-style: none;
-    margin-top: 0;
     padding-right: 6px;
     width: 36px;
-    z-index: 1;
   }
 
   button {
     @include single-transition(background-color, .25s, .25s);
+    @include smallshadow;
     background: $white;
-    border: none;
+    border: solid 1px $gray-lighter;
+    border-radius: 4px;
     color: $gray-light;
     text-decoration: none;
-    height: 28px;
-    width: 28px;
+    height: 30px;
+    width: 30px;
     padding: 0;
   }
 
